[package]
name = "babysitter"
version = "0.1.0"
authors = ["sunbo.kie <sunbo.kie@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="0.3.5", features=["full"]}
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.8.2"
chrono = "0.4.19"
lazy_static = "1.4.0"